[gd_scene load_steps=6 format=3 uid="uid://dxtoud36rk7b6"]

[ext_resource type="Script" uid="uid://dbk7t3n1wnxrd" path="res://scripts/bedroom/bed.gd" id="1_1rye4"]
[ext_resource type="Shader" uid="uid://co5gqgupj2yu7" path="res://scenes/level_1_painting.gdshader" id="2_6hmn3"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_q2dsb"]
shader = ExtResource("2_6hmn3")
shader_parameter/line_color = Color(1, 0.34509805, 0, 1)
shader_parameter/line_thickness = 1.322000062795

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_p3r0x"]
load_path = "res://.godot/imported/fancy_mansion_furnitureset.png-d23b050a7caff2f4379cc297a38e3e1a.ctex"

[sub_resource type="RectangleShape2D" id="RectangleShape2D_5xqnf"]
size = Vector2(76.5, 75)

[node name="Bed" type="Node2D"]
z_index = 50
script = ExtResource("1_1rye4")

[node name="BedSprite" type="Sprite2D" parent="."]
material = SubResource("ShaderMaterial_q2dsb")
position = Vector2(104, 37)
texture = SubResource("CompressedTexture2D_p3r0x")
region_enabled = true
region_rect = Rect2(127, 407.963, 79, 73)

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(103.75, 38.5)
shape = SubResource("RectangleShape2D_5xqnf")

[connection signal="body_entered" from="Area2D" to="." method="_on_bed_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_bed_exited"]
